fix: math overflow styles

--- a/app/markdown.scss
+++ b/app/markdown.scss
@@ -415,6 +415,7 @@
 .markdown-body p {
   margin-top: 0;
   margin-bottom: 10px;
+  overflow: auto;
 }
 
 .markdown-body blockquote {
